--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,94 @@
-body {
+@import url("https://fonts.googleapis.com/css2?family=PT+Sans+Narrow:wght@400;700&family=Poppins:wght@400;500;600;700&family=Rubik:wght@400;500;600;700&display=swap");
+
+* {
+  padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  box-sizing: border-box;
+}
+body {
+  font-family: "Poppins", sans-serif;
+  height: auto;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+html {
+  scroll-behavior: smooth;
+  scroll-padding-top: 70px;
+}
+
+:root {
+  --first-section-Fsize: 95px;
+
+  --h1-font-size: 55px;
+  --h2-font-size: 30px;
+  --reg-text-Fsize: 25px;
+  --span-font-size: 16px;
+  --text-color: #f3ed96;
+  --bg-color: #212b4e;
+  --shadow: 0px 0px 50px 5px hsla(228, 3%, 28%, 0.711);
+  --border-radius-btn: 5px;
+}
+
+.btn {
+  border: none;
+  outline: none;
+  background-color: var(--bg-color);
+
+  color: var(--text-color);
+  padding: 10px 20px;
+  border-radius: var(--border-radius-btn);
+  font-weight: bold;
+  transition: 0.3s all;
+  border: 2px solid var(--text-color);
+}
+.btn:hover {
+  background-color: var(--text-color);
+  border: 2px solid var(--bg-color);
+  color: var(--bg-color);
+}
+
+li {
+  list-style: none;
+}
+a {
+  color: white;
+  text-decoration: none;
+  transition: 0.3s all;
+}
+a:hover {
+  color: var(--text-color);
+}
+
+.grid {
+  display: grid;
+}
+
+.underline {
+  position: relative;
+  color: var(--bg-color);
+  font-weight: bold;
+}
+.underline:hover {
+  color: var(--bg-color);
+}
+
+.underline::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 0;
+  height: 3px;
+  background-color: var(--bg-color);
+  transition: 0.3s ease;
+  border-radius: 3px;
+}
+.underline:hover::before {
+  width: 100%;
+}
+.yellow-txt {
+  color: var(--text-color);
+}
+
+h3 {
+  font-weight: 400;
 }
