packages section finished

--- a/src/components/HomeSect/Home.css
+++ b/src/components/HomeSect/Home.css
@@ -8,17 +8,18 @@
 }
 .bg-content {
   background-image: url(./images/Background.png);
-  background-color: #212b4ed0;
+  background-color: #212b4e;
   background-blend-mode: overlay;
-  height: 100vh;
+  height: 90vh;
   background-size: cover;
   display: flex;
   flex-direction: column;
   background-repeat: no-repeat;
   align-items: flex-start;
-  padding: 7rem;
-
+  /* padding: 7rem; */
+  margin-bottom: 50px;
   justify-content: center;
+  background-attachment: fixed;
 }
 
 .main-content {
@@ -27,6 +28,7 @@
   align-items: flex-start;
   gap: 50px;
   transform: translateY(50px);
+  padding-left: 7rem;
 }
 
 .headers {
