--- a/src/components/GizaAndCairo/Giza/Giza.css
+++ b/src/components/GizaAndCairo/Giza/Giza.css
@@ -14,14 +14,23 @@
 
 .position-abs {
   position: absolute;
-  bottom: 30px;
+  bottom: 28px;
   left: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 10px;
+  width: 90%;
 }
 
 .image-container {
   position: relative;
   color: white;
   font-size: 1.225rem;
+}
+.image-container img {
+  border-radius: 10px;
 }
 
 .image-container::before {
@@ -30,6 +39,65 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+  height: 300px;
+  border-radius: 10px;
   background-color: #212b4ea1;
+}
+
+.visit-btn {
+  /* border: 2px solid var(--text-color); */
+  padding: 5px;
+  align-self: flex-end;
+  border-radius: 10px;
+  font-weight: bold;
+}
+.main-content-giza {
+  display: flex;
+  flex-direction: column;
+  gap: 50px;
+
+  margin: auto;
+  margin-block: 100px;
+}
+
+.headers-giza {
+  width: 80%;
+  margin: auto;
+}
+
+.headers-giza h1 {
+  font-size: 55px;
+  color: #184e81;
+}
+.headers-giza span {
+  font-size: 1.825rem;
+}
+
+.more-giza {
+  color: #184e8196;
+  font-size: 1.425rem;
+  font-weight: bold;
+  position: relative;
+}
+.more-giza:hover {
+  color: #184e81 !important;
+}
+.more-giza::before {
+  content: "";
+  position: absolute;
+  width: 0%;
+  height: 4px;
+  background: #184e81;
+  transition: 0.3s all ease-in-out;
+  bottom: 0;
+  left: 0;
+}
+.more-giza:hover::before {
+  width: 100%;
+}
+
+.link-to-giza {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
