--- a/src/components/GizaAndCairo/Giza/Giza.css
+++ b/src/components/GizaAndCairo/Giza/Giza.css
@@ -1,7 +1,7 @@
 .grid-container {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  gap: 10px;
+  gap: 15px;
 }
 
 .trip-cards-container {
@@ -10,6 +10,7 @@
 }
 .image-container {
   position: relative;
+  transition: 0.3s ease-in-out all;
 }
 
 .position-abs {
@@ -39,7 +40,7 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 300px;
+  height: 350px;
   border-radius: 10px;
   background-color: #212b4ea1;
 }
@@ -100,4 +101,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.image-container:hover {
+  transform: scale(1.05);
 }
