--- a/src/components/SideBar/sideStyle.css
+++ b/src/components/SideBar/sideStyle.css
@@ -3,8 +3,8 @@
   z-index: 10000;
   left: 0;
   top: 0%;
-  padding: 10px;
-  width: 140px;
+  /* padding: 10px; */
+  width: 100px;
   max-width: 150px;
   height: 100%;
   background-color: #212b4e;
@@ -12,7 +12,7 @@
   flex-direction: column;
   justify-content: space-between;
   gap: 50px;
-  box-shadow: 0px 0px 50px 4px #212b4ec5;
+  box-shadow: 0px 0px 70px 10px #212b4eb3;
   color: white;
 }
 
@@ -23,8 +23,19 @@
   align-items: center;
   font-size: 1.825rem;
   height: 100%;
-  gap: 50px;
+  gap: 30px;
   transform: translateY(-65px);
+}
+.clicked {
+  border-right: 3px solid gold;
+  width: 100%;
+  text-align: center;
+  background-color: #323643;
+  padding-block: 10px;
+  transition: 0.3s ease-in-out all;
+}
+.inactive {
+  border: none;
 }
 
 .navbar-header {
@@ -32,7 +43,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 30px 0px;
+  padding: 5px 0px;
   width: 100%;
   border-bottom: 4px solid rgba(255, 255, 255, 0.457);
 }
@@ -70,9 +81,8 @@
   border-radius: 10px;
   filter: blur(0px);
   left: 80px;
-  z-index: -1;
+  z-index: 100;
   opacity: 1;
-  z-index: -100;
 }
 .Packages {
   transition: 0.3s all ease-in-out;
@@ -88,7 +98,6 @@
   filter: blur(5px);
   padding: 10px;
   opacity: 0;
-  z-index: -100;
 }
 .Packages:hover::before {
   content: "Packages section";
@@ -99,9 +108,9 @@
   border-radius: 10px;
   filter: blur(0px);
   left: 80px;
-  z-index: -1;
+
   opacity: 1;
-  z-index: -100;
+  z-index: 100;
 }
 .Giza {
   transition: 0.3s all ease-in-out;
@@ -118,7 +127,6 @@
   padding: 10px;
   opacity: 0;
   width: 150px;
-  z-index: -100;
 }
 .Giza:hover::before {
   content: "Giza and cairo trips";
@@ -132,7 +140,7 @@
   z-index: -1;
   opacity: 1;
   width: 150px;
-  z-index: -100;
+  z-index: 100;
 }
 .Fun {
   transition: 0.3s all ease-in-out;
@@ -148,7 +156,7 @@
   filter: blur(5px);
   padding: 10px;
   opacity: 0;
-  z-index: -100;
+  z-index: 100;
 }
 .Fun:hover::before {
   content: "Fun Rides";
@@ -161,7 +169,7 @@
   left: 80px;
   z-index: -1;
   opacity: 1;
-  z-index: -100;
+  z-index: 100;
 }
 .Late {
   transition: 0.3s all ease-in-out;
@@ -178,7 +186,7 @@
   padding: 10px;
   opacity: 0;
   width: 100px;
-  z-index: -100;
+  z-index: 100;
 }
 .Late:hover::before {
   content: "Late Night Dates";
@@ -189,10 +197,10 @@
   border-radius: 10px;
   filter: blur(0px);
   left: 80px;
-  z-index: -1;
+
   opacity: 1;
   width: 100px;
-  z-index: -100;
+  z-index: 100;
 }
 .sidebar-list li a {
   width: 100%;
