--- a/src/components/ReviewsComponents/RevComp/RevContent/Menu.css
+++ b/src/components/ReviewsComponents/RevComp/RevContent/Menu.css
@@ -5,7 +5,7 @@
   justify-content: space-around;
   gap: 150px;
   align-items: center;
-  margin: 70px auto;
+  margin: 40px auto;
   padding: 20px;
   border-radius: 10px;
   box-shadow: var(--light-shadow);
@@ -30,5 +30,9 @@
   grid-template-columns: repeat(6, 1fr);
   width: 90%;
   gap: 20px;
+  margin: 20px auto;
 }
 
+.filter {
+  grid-column: 5/7;
+}
