--- a/src/components/ReviewsComponents/RevComp/RevContent/Menu.css
+++ b/src/components/ReviewsComponents/RevComp/RevContent/Menu.css
@@ -28,7 +28,7 @@
 .comments-body {
   display: grid;
   grid-template-columns: repeat(6, 1fr);
-  grid-template-rows: repeat(auto, auto);
+  grid-template-rows: repeat(1, 1fr);
   width: 90%;
   gap: 20px;
   margin: auto;
@@ -36,6 +36,7 @@
 
 .filter {
   grid-column: 5/7;
+  grid-row: 1/2;
 }
 
 .testimonials {
